Add one more recipe, CSS file and files associated with CSS (ie. SVG)

--- a/index.html
+++ b/index.html
@@ -4,28 +4,50 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Recipes</title>
 	</head>
 	<body>
-		<h1>Recipes</h1>
-		<h2>Basics</h2>
-		<ul>
+		<h1 class="headers">Recipes</h1>
+		<h2 class="headers">Basics</h2>
+		<ul class="body-text">
 			<li>
-				<a href="recipes/coconut-lime-rice.html"
-					>Simple Coconut Rice with Hint of Lime</a
+				<a class="recipe-title-hp" href="recipes/coconut-lime-rice.html"
+					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Simple
+					Coconut Rice with Hint of Lime</a
 				>
 			</li>
 		</ul>
-		<h2>Entrees</h2>
-		<ul>
+		<h2 class="headers">Entrees</h2>
+		<ul class="body-text unordered">
 			<li>
-				<a href="recipes/egg-fried-rice.html">The Easiest Egg Fried Rice</a>
+				<a class="recipe-title-hp" href="recipes/egg-fried-rice.html"
+					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />The
+					Easiest Egg Fried Rice</a
+				>
 			</li>
 			<li>
-				<a href="recipes/red-lentil-curry.html">Simple Red Lentil Curry</a>
+				<a class="recipe-title-hp" href="recipes/red-lentil-curry.html"
+					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Simple
+					Red Lentil Curry</a
+				>
 			</li>
 		</ul>
-		<h2>Sides</h2>
-		<h2>Sauces</h2>
+		<!--<h2 class="headers">Sides</h2>-->
+		<h2 class="headers">Sauces</h2>
+		<ul class="body-text unordered">
+			<li>
+				<a class="recipe-title-hp" href="recipes/teriyaki-sauce.html"
+					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Teriyaki
+					Sauce</a
+				>
+			</li>
+		</ul>
 	</body>
 </html>
