--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -4,21 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="../style.css" />
 		<title>The Easiest Egg Fried Rice</title>
 	</head>
 	<body>
 		<h1>
 			<a href="https://healthynibblesandbits.com/easiest-egg-fried-rice/"
-				>The Easiest Egg Fried Rice</a
-			>
+				>The Easiest Egg Fried Rice<img
+					class="external-link-svg"
+					src="../svg/external-link.svg"
+					alt="external link SVG"
+			/></a>
 		</h1>
 		<img
+			class="recipe-picture"
 			src="../photos/egg-fried-rice.jpg"
 			alt="Egg fried rice on a plate."
 			height="200"
 		/>
 		<h2>Description</h2>
-		<p>
+		<p class="body-text">
 			A no-fuss meal that you can easily modify with whatever vegetables you
 			have on hand. Try to use day-old rice. This ensures that there isn't too
 			much moisture in the rice so that the fried rice does not end up being too
@@ -26,7 +37,7 @@
 			completely before stir frying.
 		</p>
 		<h2>Ingredients</h2>
-		<ul>
+		<ul class="body-text">
 			<li>4 large eggs</li>
 			<li>3 tablespoons oil</li>
 			<li>1 cup diced onion</li>
@@ -42,7 +53,7 @@
 			<li>1 to 2 teaspoons toasted sesame oil</li>
 		</ul>
 		<h2>Instructions</h2>
-		<ol>
+		<ol class="body-text">
 			<li>Crack the eggs into a small bowl and beat them together.</li>
 			<li>
 				Heat a skillet with 1 tablespoon of the oil over medium-high heat. Once
