--- a/recipes/red-lentil-curry.html
+++ b/recipes/red-lentil-curry.html
@@ -4,28 +4,39 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="../style.css" />
 		<title>Simple Red Lentil Curry</title>
 	</head>
 	<body>
 		<h1>
 			<a href="https://healthynibblesandbits.com/simple-red-lentil-curry/"
-				>Simple Red Lentil Curry</a
-			>
+				>Simple Red Lentil Curry<img
+					class="external-link-svg"
+					src="../svg/external-link.svg"
+					alt="external link SVG"
+			/></a>
 		</h1>
 		<img
+			class="recipe-picture"
 			src="../photos/red-lentil-curry.jpg"
 			alt="Red Lentil Curry in a bowl"
 			height="200"
 		/>
 		<h2>Description</h2>
-		<p>
+		<p class="body-text">
 			A delicious dish that you can make in one pot. If you want to add
 			something more to the curry, consider adding pan-fried tofu. You can also
 			freeze leftovers. Wait until the lentil curry cools completely before
 			transferring to a container.
 		</p>
 		<h2>Ingredients</h2>
-		<ul>
+		<ul class="body-text">
 			<li>1 cup dry red lentils</li>
 			<li>2 tablespoons virgin coconut oil</li>
 			<li>3/4 cup finely diced yellow onion</li>
@@ -43,7 +54,7 @@
 			<li>chopped peanuts, for garnish</li>
 		</ul>
 		<h2>Instructions</h2>
-		<ol>
+		<ol class="body-text">
 			<li>
 				Rinse the red lentils and pick out any dark or discolored pieces. Drain
 				and set the lentils aside.
