--- a/recipes/coconut-lime-rice.html
+++ b/recipes/coconut-lime-rice.html
@@ -4,36 +4,47 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito&family=Playfair+Display:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="../style.css" />
 		<title>Simple Coconut Rice with a Hint of Lime</title>
 	</head>
 	<body>
 		<h1>
 			<a href="https://healthynibblesandbits.com/simple-coconut-rice/"
-				>Simple Coconut Rice with a Hint of Lime</a
-			>
+				>Simple Coconut Rice with a Hint of Lime<img
+					class="external-link-svg"
+					src="../svg/external-link.svg"
+					alt="external link SVG"
+			/></a>
 		</h1>
 		<img
+			class="recipe-picture"
 			src="../photos/coconut-lime-rice.jpg"
 			alt="Coconut lime rice in a bowl"
 			height="200"
 		/>
 		<h2>Description</h2>
-		<p>
+		<p class="body-text">
 			Lime flavor compliments this coconut rice very well, so I highly recommend
 			mixing 1 to 2 tablespoons of lime juice to the rice to brighten everything
 			up. You can infuse even more lime flavor by adding the zest of 1 lime into
 			the rice. Add it before you start cooking the rice or after the rice is
 			cooked. Note that if you cook the rice with the lime zest, the rice will
-			pick up a faint green hue. 
+			pick up a faint green hue.
 		</p>
-		<p>
+		<p class="body-text">
 			Once you turn off the heat for the rice, let it rest in the saucepan,
-			covered. Because we’re cooking the rice for only about 8 to 9 minutes, we
+			covered. Because we're cooking the rice for only about 8 to 9 minutes, we
 			need the residual steam in the saucepan to finish the cooking process.
-			That’s why it’s crucial to leave the lid on.
+			That's why it's crucial to leave the lid on.
 		</p>
 		<h2>Ingredients</h2>
-		<ul>
+		<ul class="body-text">
 			<li>1 cup jasmine or basmati rice</li>
 			<li>1/3 cup full-fat coconut milk</li>
 			<li>1 cup water</li>
@@ -41,7 +52,7 @@
 			<li>1 1/2 tablespoons lime juice</li>
 		</ul>
 		<h2>Instructions</h2>
-		<ol>
+		<ol class="body-text">
 			<li>
 				Rinse the rice several times and transfer it to a saucepan. Add the
 				coconut milk, water, and salt and give everything a stir.
