Remove headers class because it's not being used

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<title>Recipes</title>
 	</head>
 	<body>
-		<h1 class="headers">Recipes</h1>
-		<h2 class="headers">Basics</h2>
+		<h1>Recipes</h1>
+		<h2>Basics</h2>
 		<ul class="body-text">
 			<li>
 				<a class="recipe-title-hp" href="recipes/coconut-lime-rice.html"
@@ -24,7 +24,7 @@
 				>
 			</li>
 		</ul>
-		<h2 class="headers">Entrees</h2>
+		<h2>Entrees</h2>
 		<ul class="body-text unordered">
 			<li>
 				<a class="recipe-title-hp" href="recipes/egg-fried-rice.html"
@@ -40,7 +40,7 @@
 			</li>
 		</ul>
 		<!--<h2 class="headers">Sides</h2>-->
-		<h2 class="headers">Sauces</h2>
+		<h2>Sauces</h2>
 		<ul class="body-text unordered">
 			<li>
 				<a class="recipe-title-hp" href="recipes/teriyaki-sauce.html"
