Remove recipe-title-hp class because it's not being used

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h2>Basics</h2>
 		<ul class="body-text">
 			<li>
-				<a class="recipe-title-hp" href="recipes/coconut-lime-rice.html"
+				<a href="recipes/coconut-lime-rice.html"
 					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Simple
 					Coconut Rice with Hint of Lime</a
 				>
@@ -27,13 +27,13 @@
 		<h2>Entrees</h2>
 		<ul class="body-text unordered">
 			<li>
-				<a class="recipe-title-hp" href="recipes/egg-fried-rice.html"
+				<a href="recipes/egg-fried-rice.html"
 					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />The
 					Easiest Egg Fried Rice</a
 				>
 			</li>
 			<li>
-				<a class="recipe-title-hp" href="recipes/red-lentil-curry.html"
+				<a href="recipes/red-lentil-curry.html"
 					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Simple
 					Red Lentil Curry</a
 				>
@@ -43,7 +43,7 @@
 		<h2>Sauces</h2>
 		<ul class="body-text unordered">
 			<li>
-				<a class="recipe-title-hp" href="recipes/teriyaki-sauce.html"
+				<a href="recipes/teriyaki-sauce.html"
 					><img class="arrow-svg" src="svg/arrow.svg" alt="arrow SVG" />Teriyaki
 					Sauce</a
 				>
