Add target=_blank so recipe title opens in new tab

--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 		<h1>
-			<a href="https://healthynibblesandbits.com/easiest-egg-fried-rice/"
+			<a
+				href="https://healthynibblesandbits.com/easiest-egg-fried-rice/"
+				target="_blank"
 				>The Easiest Egg Fried Rice<img
 					class="external-link-svg"
 					src="../svg/external-link.svg"
