--- a/recipes/red-lentil-curry.html
+++ b/recipes/red-lentil-curry.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 		<h1>
-			<a href="https://healthynibblesandbits.com/simple-red-lentil-curry/"
+			<a
+				href="https://healthynibblesandbits.com/simple-red-lentil-curry/"
+				target="_blank"
 				>Simple Red Lentil Curry<img
 					class="external-link-svg"
 					src="../svg/external-link.svg"
