--- a/recipes/teriyaki-sauce.html
+++ b/recipes/teriyaki-sauce.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 		<h1>
-			<a href="https://healthynibblesandbits.com/teriyaki-sauce/"
+			<a
+				href="https://healthynibblesandbits.com/teriyaki-sauce/"
+				target="_blank"
 				>Teriyaki Sauce<img
 					class="external-link-svg"
 					src="../svg/external-link.svg"
