--- a/recipes/coconut-lime-rice.html
+++ b/recipes/coconut-lime-rice.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 		<h1>
-			<a href="https://healthynibblesandbits.com/simple-coconut-rice/"
+			<a
+				href="https://healthynibblesandbits.com/simple-coconut-rice/"
+				target="_blank"
 				>Simple Coconut Rice with a Hint of Lime<img
 					class="external-link-svg"
 					src="../svg/external-link.svg"
